# RectangleBinPack

./: .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
HybMatLayout/: CMakeLists.txt  HybMatLayout.cpp
MaxRectsBinPackTest/: BinPack.cpp
include/: MaxRectsBinPack.h
src/: CMakeLists.txt  MaxRectsBinPack.cpp
